#342 comment: fixed font-size and social icon size on mobile

--- a/app/design/frontend/Bangkok/default/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Bangkok/default/Magento_Theme/web/css/source/_module.less
@@ -616,27 +616,29 @@
     .footer.content {
       padding-left: 0;
       padding-right: 0;
-      padding-top: 5px;
+      padding-top: 0;
       .mobile-footer {
         display: block;
         .social-links {
           width: 100%;
           display: inline-block;
-          border-bottom: 2px solid #d1d1d1;
-          margin-bottom: 5px;
+          border-bottom: 2px solid #d9d2cb - 50%;
+          //margin-bottom: 5px;
           span {
-            padding-left: 15px;
+            padding-left: 10px;
             display: inline-block;
-            margin-top: 9px;
+            margin-top: 12px;
             text-transform: uppercase;
+            font-size: 1.6rem;
           }
           .links-container {
-            width: 210px;
+            width: 217px;
             float: right;
+            margin-right: 5%;
             a.social-acc-pic {
               margin-right: 15px;
-              height: 32px;
-              width: 32px;
+              height: 40px;
+              width: 40px;
               display: inline-block;
               img {
                 width: 100%;
@@ -649,11 +651,13 @@
         }
         .general-subcategories {
           div {
-            border-bottom: 2px solid #d1d1d1;
-            padding-bottom: 7px;
-            padding-top: 7px;
+            border-bottom: 2px solid #d9d2cb - 50%;
+            padding-bottom: 0;
+            padding-top: 8px;
+            height: 30px;
             a {
-              padding-left: 15px;
+              padding-left: 10px;
+              font-size: 1.6rem;
             }
           }
         }
